--- a/app/src/main/res/layout/fg_content.xml
+++ b/app/src/main/res/layout/fg_content.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_white">
-    <TextView
-        android:id="@+id/txt_content"
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="No Data"
-        android:textColor="@color/text_yellow"
-        android:textSize="20sp"/>
+        android:layout_height="match_parent">
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.NestedScrollView>
+
 </LinearLayout>
