--- a/app/src/main/res/layout/article_item.xml
+++ b/app/src/main/res/layout/article_item.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/txt_item_title"
-        android:layout_marginTop="8dp"
-        android:layout_width="wrap_content"
+    android:layout_marginLeft="@dimen/m16"
+    android:layout_marginRight="@dimen/m16"
+    android:layout_marginTop="@dimen/m12"
+    android:background="@drawable/shape_list_item_bg">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No Data, Pull to Refresh data "
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/m15">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
+            tools:src="@mipmap/ic_launcher" />
+        <TextView
+            android:id="@+id/tvDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:paddingLeft="@dimen/m10"
+            android:paddingRight="@dimen/m10"
+            android:textColor="@color/C5"
+            android:textSize="@dimen/f6"
+            tools:text="test androdi" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
