update Picasso Loading strategy
Change-Id: I5da4d4b6f6cb123852c257622fdaceab5d777b7c

--- a/app/src/main/res/layout/stagger_meizi_item.xml
+++ b/app/src/main/res/layout/stagger_meizi_item.xml
@@ -1,7 +1,7 @@
 <ImageButton xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/iv"
     android:layout_margin="5dp"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:minHeight="200dp"
     android:adjustViewBounds="true"
