--- a/app/src/main/res/layout/fg_content.xml
+++ b/app/src/main/res/layout/fg_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +15,11 @@
             android:layout_height="match_parent" />
     </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+    <com.github.lzyzsd.circleprogress.CircleProgress
+        android:id="@+id/circle_progress"
+        android:layout_centerInParent="true"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        custom:circle_progress="20"/>
+
+</RelativeLayout>
