--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,15 +6,16 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/ly_content"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:id="@+id/ly_content">
+        android:layout_height="600dp">
     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/ly_tab_bar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:layout_marginTop="601dp"
         android:background="@color/bg_white"
         android:orientation="horizontal">
 
@@ -24,8 +25,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
-            android:drawablePadding="3dp"
             android:drawableTop="@drawable/tab_menu_channel"
+            android:drawablePadding="3dp"
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/tab_menu_home"
@@ -38,8 +39,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
-            android:drawablePadding="3dp"
             android:drawableTop="@drawable/tab_menu_message"
+            android:drawablePadding="3dp"
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/tab_menu_meizi"
@@ -52,8 +53,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
-            android:drawablePadding="3dp"
             android:drawableTop="@drawable/tab_menu_better"
+            android:drawablePadding="3dp"
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/tab_menu_video"
@@ -66,14 +67,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
-            android:drawablePadding="3dp"
             android:drawableTop="@drawable/tab_menu_setting"
+            android:drawablePadding="3dp"
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/tab_menu_setting"
             android:textColor="@drawable/tab_menu_text"
-            android:textSize="16sp"/>
-
+            android:textSize="16sp" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
