--- a/app/src/main/res/layout/fragment_stagger.xml
+++ b/app/src/main/res/layout/fragment_stagger.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="600dp"
+    android:layout_height="match_parent"
     android:id="@+id/stagger_coordinatorLayout"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     android:background="#ffffff">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/stagger_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/stagger_recycleView"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
-
     </android.support.v4.widget.SwipeRefreshLayout>
-
 </android.support.design.widget.CoordinatorLayout>
