添加屏幕自适应
Change-Id: I7fc2ab19623532305cce9a6d49b538c17d40c9a2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     <FrameLayout
         android:id="@+id/ly_content"
         android:layout_width="match_parent"
-        android:layout_height="600dp">
+        android:layout_height="wrap_content">
     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/ly_tab_bar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_marginTop="601dp"
+        android:layout_alignParentBottom="true"
         android:background="@color/bg_white"
         android:orientation="horizontal">
 
