--- a/app/src/main/res/layout/tantan_item.xml
+++ b/app/src/main/res/layout/tantan_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="26dp"
     android:background="@drawable/img_card_background"
     android:gravity="center"
     android:orientation="vertical">
@@ -11,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-
         <com.example.tantancardswipe.RoundImageView
             android:id="@+id/iv_avatar"
             android:layout_width="match_parent"
@@ -25,8 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:paddingLeft="14dp"
-        android:paddingTop="15dp">
-
+        android:paddingTop="10dp">
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
@@ -70,8 +69,6 @@
             android:gravity="center"
             android:text="IT/互联网"
             android:textColor="#cbcbcb" />
-
     </RelativeLayout>
-
 
 </LinearLayout>
