--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -11,6 +11,8 @@
     <color name="text_yellow">#FFC800</color>
     <color name="text_topbar">#694E42</color>
     <color name="div_white">#E5E5E5</color>
+    <color name="tab_unselect">#c9c9c9</color>
+    <color name="colorPrimary">#F44336</color>
 
 
     <color name="C1">#2dbc6d</color>
