--- a/gank_core/src/main/res/values/ids.xml
+++ b/gank_core/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="delegate_container" type="id">delegate_container</item>
+    <item name="delegate_container" type="id">
+    </item>
 </resources>
