--- a/app/src/main/res/layout/line_meizi_item.xml
+++ b/app/src/main/res/layout/line_meizi_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
     android:background="#ffffff"
     android:layout_marginTop="10dp">
 
     <ImageView
         android:id="@+id/line_item_iv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"/>
 
