引入BaseRecyclerViewAdapterHelper，简化代码，丰富列表的显示效果
Change-Id: I6ee991e2a6751a308a5219ed448c274f6ca91355

--- a/app/src/main/res/layout/line_meizi_item.xml
+++ b/app/src/main/res/layout/line_meizi_item.xml
@@ -2,10 +2,12 @@
 <android.support.design.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
     android:layout_marginTop="10dp"
+    android:layout_marginRight="50dp"
+    android:layout_marginLeft="50dp"
     app:cardCornerRadius="10dp"
     app:contentPadding="3dp"
     app:cardElevation="8dp">
