--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -13,7 +13,9 @@
     <color name="div_white">#E5E5E5</color>
     <color name="tab_unselect">#c9c9c9</color>
     <color name="colorPrimary">#F44336</color>
-
+    <color name="bg">#F0F0F0</color>
+    <color name="txt_color">#48495F</color>
+    <color name="color_light_blue">#00DDB6</color>
 
     <color name="C1">#2dbc6d</color>
     <color name="C2">#FFFEFE</color>
