--- a/app/src/main/res/layout/empty_view.xml
+++ b/app/src/main/res/layout/empty_view.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              style="@style/bg"
               android:gravity="center"
               android:orientation="vertical"
-    >
-    <ImageView
-        style="@style/empty_img"
-        android:src="@mipmap/empty_icon"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_marginTop="5dp"
