fixbug：android App启动闪白屏问题
Change-Id: Ia8542ee1412dc329f349be7790a129b47cb8f632

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
     </style>
 
+    <style name="AppStartLoad" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@mipmap/launcher</item>
+    </style>
+
     <declare-styleable name="CircleProgress">
         <attr name="circle_progress" format="integer"/>
         <attr name="circle_max" format="integer"/>
