延迟初期化第三方框架
Change-Id: I0ef1b0c54872a0313843b17a0856091ab14aa65a

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
     </style>
 
     <style name="AppStartLoad" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@mipmap/launcher</item>
     </style>
 
     <declare-styleable name="CircleProgress">
