--- a/app/src/main/res/layout/delegate_launcher.xml
+++ b/app/src/main/res/layout/delegate_launcher.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/launcher">
+    android:background="@mipmap/banner">
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="70dp"
         android:layout_height="70dp"
