--- a/app/src/main/res/layout/activity_enter.xml
+++ b/app/src/main/res/layout/activity_enter.xml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".EnterActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/enter">
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
