--- a/app/src/main/res/layout/line_meizi_item.xml
+++ b/app/src/main/res/layout/line_meizi_item.xml
@@ -2,14 +2,14 @@
 <android.support.design.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="50dp"
-    android:layout_marginLeft="50dp"
+    android:layout_marginTop="0dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
     app:cardCornerRadius="10dp"
-    app:contentPadding="3dp"
+    app:contentPadding="10dp"
     app:cardElevation="8dp">
 
     <ImageView
