--- a/app/src/main/res/layout/activity_enter.xml
+++ b/app/src/main/res/layout/activity_enter.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/banner">
-    <android.support.v7.widget.AppCompatTextView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/border_cycle_timer"
-        android:textSize="16sp"
-        android:textColor="@color/bg_white"
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/img_launcher_welcome"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:id="@+id/tv_launcher_timer"/>
-</RelativeLayout>
+        android:textStyle="bold"
+        android:text="欢迎进入Ganks"
+        android:textColor="@android:color/white"/>
+</FrameLayout>
